# ml-exp-env

./: .dvcignore  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  colmap.sh  compose.yaml  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_test.txt  ruff.toml  settings.json  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json  vscode_extentions_install_batch.sh
.docker/: Docker  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  jupyter_notebook_config.py  requirements.txt  requirements_colab.txt
config/nsff/: config_isi_work.txt
notebook/: movie_to_img.ipynb  neural_scene_flow_fields_train.ipynb
setup/: install.sh
src/cdk/setup/: README.md  app.py
src/cdk/setup/setup/: setup_stack.py
src/cdk/setup/tests/unit/: test_setup_stack.py
src/conf/: config.yaml  default.yaml
src/conf/cdk/: cdk.yaml  default.yaml
src/conf/ml/: default.yaml  ml.yaml
src/conf/neptune/: default.yaml  neptune.yaml
src/params/: conf.py
src/params/subs/: cdk.py  ml.py  neptune.py
src/sample/: neptune_train.py
src/sample/designpattern/: abstract_base_class.py  adapter_pattern.py  singleton_pattern.py  zope_interface.py
src/sample/mlops/: neptune_train.py
src/util/: conf.py  load_env.py  logger.py  ml.py
src/utils/: load_env.py  logger.py
tests/: test_sample.py
tests/cdk/: test_setup_stack.py
