[project]
name = "ml-env"
version = "0.1.0"
description = "ml-env"

authors = [{ name = "k-washi", email = "bandad.kw@gmail.com" }]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy==1.26.4",
    "torch>=2.5.1",
    #"numpy>=1.26.3",
    #"torch==2.4.1+cu121",
]


[tool.uv]
#extra-index-url = ["https://download.pytorch.org/whl/cu121"]
dev-dependencies = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.386",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "platform_system != 'Darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
